// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Indicator as counter with 1 digit 1`] = `
<body>
  <div>
    <div
      aria-label="Counter"
      class="counter marginTop"
      role="status"
    >
      <div
        class="light alignCenter breakWord Text fontWeightSemiBold fontSize100"
      >
        3
      </div>
    </div>
  </div>
</body>
`;

exports[`Indicator as counter with 3 digits 1`] = `
<body>
  <div>
    <div
      aria-label="Counter"
      class="counter marginTop"
      role="status"
    >
      <div
        class="light alignCenter breakWord Text fontWeightSemiBold fontSize100"
      >
        99+
      </div>
    </div>
  </div>
</body>
`;

exports[`Indicator as notification 1`] = `
<body>
  <div>
    <div
      aria-label="Notification"
      class="notification"
      role="status"
    />
  </div>
</body>
`;
